@@ -1,4 +1,9 @@
 
+                CHANGES IN party VERSION 0.9-996 (2009-03-27)
+
+    o    survival fixes
+
+
                 CHANGES IN party VERSION 0.9-994 (2009-02-10)
 
     o    fix bug in new varimp function (which was triggered
